# GoIT_PyWeb_HW_7

./: config.ini  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: 543746027d1f_test.py  6734b233668a_back_populates.py  bd029c41b79e_init.py
database/: db.py  models.py
seeds/: Subjects.py  grades.py  groups.py  students.py  teachers.py
